add ios app index.html

--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
             <div class="projects-grid">
                 
                 <article class="card">
-                    <h3>IOS-Trainings-Monitoring-App</h3>
-                    <p>Eine App mit der ich täglich Fragen zu Gewicht, Wohlbefinden etc. beantworten und tracken kann.
-                        Als Ergänzung zu meinem Training.
+                    <h3>IOS Wellbeing Tracker</h3>
+                    <p>Eine App zur Überwachung der Regnerationsfähigkeit von Sportlern.
+                        Fokus auf Datenpersistenz und Visualisierung von Trends
                     </p>
                     <div class="tech-stack">
-                        <span class="tech-tag">XCode</span>
+                        <span class="tech-tag">SwiftUI</span>
+                        <span class="tech-tag">SwiftData</span>
+                        <span class="tech-tag">Swift Charts</span>
+                        <span class="tech-tag">iOS 17</span>
                     </div>
                     <div class="links">
-                        <a href="#">🐱 Code auf GitHub</a>
+                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code & Screens</a>
                         </div>
                 </article>
 
@@ -60,7 +63,7 @@
                         <span class="tech-tag">Responsive</span>
                     </div>
                     <div class="links">
-                        <a href="#">🐱 Repository ansehen</a>
+                        <a href="https://github.com/Jannik431/Jannik431.github.io">🐱 Repository ansehen</a>
                     </div>
                 </article>
 
