add reponsive design

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2024 Max Mustermann. Gebaut mit Kaffee und Code.</p>
+            <p>&copy; 2025 Jannik Pasch. Gebaut mit Kaffee und Code.</p>
         </footer>
     </div>
 </body>
