--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@
     
             <div class="timeline">
                 <div class="timeline-item">
-                    <span class="timeline-date">Okt 2023 – Heute</span>
+                    <span class="timeline-date">Okt 2024 – Heute</span>
                     <h3>B.Sc. Medieninformatik</h3>
                     <p style="opacity: 0.8;">Hochschule Düsseldorf</p>
             </div>
 
             <div class="timeline-item">
-                <span class="timeline-date">20XX – 20XX</span>
+                <span class="timeline-date">2015 – 2023</span>
                 <h3>Allgemeine Hochschulreife (Abitur)</h3>
                 <p style="opacity: 0.8;">Werner-Jaeger-Gymnasium, Nettetal</p>
-                <p style="margin-top: 0.5rem; font-size: 0.95rem;">
-                    Leistungskurse: Mathematik, Biologie.
-                </p>
             </div>
         </div>
         </section>
