add gitignore Änderungen am Werdegang, ist jetzt ein durchgehender Zeitstrahl

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         </section>
 
-        <section>
+        <section style="margin-top: 4rem">
             <h2 style="font-family: var(--code-font);">02. Projekte</h2>
             
             <div class="projects-grid">
