--- a/index.html
+++ b/index.html
@@ -46,22 +46,19 @@
                 <article class="card">
                     <h3>IOS Wellbeing Tracker</h3>
                     <p>Eine App zur Überwachung der Regnerationsfähigkeit von Sportlern.
-                        Fokus auf Datenpersistenz und Visualisierung von Trends
                     </p>
                     <div class="tech-stack">
-                        <span class="tech-tag">SwiftUI</span>
-                        <span class="tech-tag">SwiftData</span>
-                        <span class="tech-tag">Swift Charts</span>
+                        <span class="tech-tag">Swift</span>
                         <span class="tech-tag">iOS 17</span>
                     </div>
                     <div class="links">
-                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code & Screens</a>
+                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code</a>
                         </div>
                 </article>
 
                 <article class="card">
-                    <h3>Android App: Puzzel-Spiel</h3>
-                    <p>Nutzer können sich beim lösen mehrerer Tetris-Artigen Puzzles testen.
+                    <h3>Android App: Puzzle-Spiel</h3>
+                    <p>Nutzer können sich beim Lösen mehrerer Tetris-artigen Puzzles probieren.
                         (Studien-Projekt)
                     </p>
                     <div class="tech-stack">
@@ -74,10 +71,10 @@
 
                 <article class="card">
                     <h3>Portfolio Website</h3>
-                    <p>Diese Website hier. Gebaut mit performantem, semantischem HTML und modernem CSS ohne Framework-Overhead.</p>
+                    <p>Diese Website hier. Gebaut mit performantem, semantischem HTML und CSS.</p>
                     <div class="tech-stack">
-                        <span class="tech-tag">HTML5</span>
-                        <span class="tech-tag">CSS3</span>
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
                         <span class="tech-tag">Responsive</span>
                     </div>
                     <div class="links">
