Link zum Code Android App

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Java</span>
+                        <span class="rech-tag">Android Studio</span>
                     </div>
                     <div class="links">
-                        <a href="#">🐱 Code auf GitHub</a>
+                        <a href="https://github.com/Jannik431/android-puzzel-game">🐱 Code auf GitHub</a>
                     </div>
                 </article>
 
