--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <span class="tech-tag">iOS 17</span>
                     </div>
                     <div class="links">
-                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code</a>
+                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code und Screenshots auf GitHub</a>
                         </div>
                 </article>
 
@@ -66,7 +66,7 @@
                         <span class="rech-tag">Android Studio</span>
                     </div>
                     <div class="links">
-                        <a href="https://github.com/Jannik431/android-puzzel-game">🐱 Code auf GitHub</a>
+                        <a href="https://github.com/Jannik431/android-puzzel-game">🐱 Code und Screenshots auf GitHub</a>
                     </div>
                 </article>
 
@@ -79,7 +79,7 @@
                         <span class="tech-tag">Responsive</span>
                     </div>
                     <div class="links">
-                        <a href="https://github.com/Jannik431/Jannik431.github.io">🐱 Repository ansehen</a>
+                        <a href="https://github.com/Jannik431/Jannik431.github.io">🐱 Code auf GitHub</a>
                     </div>
                 </article>
 
