fehler verbessert in index

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Java</span>
-                        <span class="rech-tag">Android Studio</span>
+                        <span class="tech-tag">Android Studio</span>
                     </div>
                     <div class="links">
                         <a href="https://github.com/Jannik431/android-puzzel-game">🐱 Code und Screenshots auf GitHub</a>
