--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                 
                 <article class="card">
                     <h3>IOS Wellbeing Tracker</h3>
-                    <p>Eine App zur Überwachung der Regnerationsfähigkeit von Sportlern.
+                    <p>Eine App zur Überwachung der Regnerationsfähigkeit von Sportlern. (Noch in der Entwicklung)
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Swift</span>
                         <span class="tech-tag">iOS 17</span>
                     </div>
                     <div class="links">
-                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code und Screenshots auf GitHub</a>
+                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code auf GitHub</a>
                         </div>
                 </article>
 
