Änderungen zur Monitoring-App

--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
                 
                 <article class="card">
                     <h3>IOS Wellbeing Tracker</h3>
-                    <p>Eine App zur Überwachung der Regnerationsfähigkeit von Sportlern. (Noch in der Entwicklung)
+                    <p>Eine App zur Überwachung der Erholungsfähigkeit von Sportlern. Der Fokus liegt auf der Ermittlung des tagesaktuellen Readiness Score zur optimalen Trainingsbelastung.
                     </p>
                     <div class="tech-stack">
-                        <span class="tech-tag">Swift</span>
+                        <span class="tech-tag">SwiftUI</span>
+                        <span class="tech-tag">SwiftData</span>
+                        <span class="tech-tag">SwiftCharts</span>
                         <span class="tech-tag">iOS 17</span>
                     </div>
                     <div class="links">
-                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code auf GitHub</a>
+                        <a href="https://github.com/Jannik431/ios-wellbeing-tracker">🐱 Code und Screenshots auf GitHub</a>
                         </div>
                 </article>
 
